--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+select:hover {
+  cursor: pointer;
+}
+
+#error-page {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
