--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,16 @@ code {
   display: flex;
   justify-content: center;
 }
+
+#error-page {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+.centered {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
